linter/src/rules/snapshots/squawk_linter__rules__adding_field_with_default__test_rules__docs_example_bad.snap
---
source: linter/src/rules/adding_field_with_default.rs
expression: "lint_sql(bad_sql, None)"
---
[
    RuleViolation {
        kind: AddingFieldWithDefault,
        span: Span {
            start: 0,
            len: Some(
                76,
            ),
        },
        messages: [
            Note(
                "Adding a field with a VOLATILE DEFAULT requires a table rewrite with an ACCESS EXCLUSIVE lock. In Postgres versions 11+, non-VOLATILE DEFAULTs can be added without a rewrite.",
            ),
            Help(
                "Add the field as nullable, then set a default, backfill, and remove nullabilty.",
            ),
        ],
    },
]
